# ai-agent-learn

./: .env  .gitignore  main.py  pyproject.toml
.temp/: amap_route.html  index.html  index2.html  index3.html
app/bailian/: bailian-qwq.py  bailian.py  bailian_agent.bash  bailian_agent.py  bailian_agent2.py  bailian_agent3.py  bailian_agent4.py  bailian_agent_1775723683892.py  bailian_prompt.py  bailian_repl.py  bailian_repl2.py  bailian_tools.py  bailian_tools2.py  common.py  output_parser.py
app/code_agent/: 1c44ac3d-6ad3-42f4-99a2-8d52110a50ce.json  57e34979-009c-4f2d-9c9f-a9d94ee0cf1f.json  9f4876bd-69f6-4013-96a9-c336957fa567.json  bailian_runables.py  bailian_runables2.py  bailian_runables3.py  multi_chat.py  multi_chat2.py  multi_chat3.py  multi_chat4.py  multi_chat5.py
app/code_agent/agent/: agent_chat.py
app/code_agent/model/: qwen.py
app/code_agent/prompts/: multi_chat_prompts.py
app/code_agent/tools/: file_saver.py  file_tools.py
app/mcp/amap/: amap_mcp_client.py
app/mcp/stdio/: github_mcp_client.py  mcp_stdin_client.py  mcp_stdin_client2.py  mcp_stdin_server.py  playwright_mcp_client.py
app/mcp/stdio/.playwright-mcp/: page-2026-04-10T07-36-14-073Z.yml  page-2026-04-10T07-36-21-739Z.yml  page-2026-04-10T07-36-27-758Z.yml
